force-app/main/default/objects/Insurance_and_Bond__c/Insurance_and_Bond__c.object-meta.xml
<CustomObject>
    <label>Insurance and Bond</label>
    <nameField>
        <label>Carrier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance and Bonds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>