force-app/main/default/objects/Insurance_and_Bond__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance and Bonds</relationshipLabel>
    <relationshipName>Insurance_and_Bonds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>