force-app/main/default/objects/Insurance_and_Bond__c/fields/Amount_of_Bond__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Bond__c</fullName>
    <label>Amount of Bond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>