force-app/main/default/objects/Insurance_and_Bond__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fidelity Bond</fullName>
            </value>
            <value>
                <fullName>State Surety Bond</fullName>
            </value>
            <value>
                <fullName>Errors and Omission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>